[gd_scene load_steps=6 format=2]

[ext_resource path="res://pre_title_menu/pre_title_menu.gd" type="Script" id=1]
[ext_resource path="res://pre_title_menu/skip.png" type="Texture" id=2]
[ext_resource path="res://pre_title_menu/skip2.png" type="Texture" id=3]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 32, 20 )
margin_left = 3.0
margin_right = 3.0
margin_top = 3.0
margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 32, 20 )
margin_left = 3.0
margin_right = 3.0
margin_top = 3.0
margin_bottom = 4.0

[node name="pre_title_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="canvas_layer" type="CanvasLayer" parent="."]
layer = 2

[node name="skip_button" type="Button" parent="canvas_layer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -54.0
margin_top = 9.0
margin_right = -16.0
margin_bottom = 33.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "ข้าม"

[connection signal="pressed" from="canvas_layer/skip_button" to="." method="_on_skip_button_pressed"]
